# block-stacker

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.learner  docker-compose.yml  pyproject.toml
client/: .gitignore  README.md  block-stacker-client.csproj  project.godot
client/scenes/: main.tscn
client/scripts/: WsClient.cs  WsClient.cs.uid
configs/: physics.yaml  reward.yaml  training.yaml  world.yaml
deploy/: 10_network.ps1  20_s3.ps1  40_iam.ps1  50_eip.ps1  60_ec2.ps1  70_lambda.ps1  80_cloudwatch.ps1  90_verify.ps1  99_destroy.ps1  common.ps1
deploy/userdata/: demo.sh  learner.sh  streamer.sh
docs/: aws_deployment.md  block_stacker_design.md  design_change_record.md  live_mode.md  local_demo.md  log_reading.md  tech_stack.md
infra-terraform/: cloudwatch.tf  ec2.tf  eip.tf  iam.tf  main.tf  network.tf  outputs.tf  s3.tf  scheduler.tf  variables.tf
infra-terraform/userdata/: streamer.sh
lambda/: build.ps1  handler.py  requirements.txt
src/block_stacker/: __init__.py  config.py
src/block_stacker/env/: __init__.py  action.py  env.py  observation.py  tower.py
src/block_stacker/mvp0/: __init__.py  demo.py
src/block_stacker/mvp1/: __init__.py  eval.py  train.py
src/block_stacker/mvp2/: checkpoint.py  curriculum.py  eval.py  train.py
src/block_stacker/mvp3/: __init__.py  ai_server.py  demo_server.py  (+2 more)
tests/: test_checkpoint.py  test_env_basic.py  test_live_server.py  test_policy.py  test_sim_basic.py  test_streaming.py  test_train.py
tools/: advance_day.ps1  curate_week.ps1  demo_checkpoints.ps1  local_loop.ps1
(+27 files in other folders)
