[project]
name = "block-stacker"
version = "0.1.0"
description = "AI block stacking ambient streaming service"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pybullet>=3.2.6",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "gymnasium>=0.29",
    "stable-baselines3>=2.3.0",
    "torch>=2.0",
    "tensorboard>=2.14",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/block_stacker"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
